# cloud-onepa-playout

./: .gitignore  ALPHA_GUIDE.md  DEPLOYMENT.md  LICENSE  OPERATIONS_MANUAL.md  README.md  RELEASE_NOTES.md  TESTING.md  clean_rebuild.sh  diagnose_srt.sh  docker-compose.rtmp.yml  docker-compose.yml  docker_repair.sh  fix_and_test_srt.sh  fix_srt_url.sql  force_fix_srt.sh  full_purge_rebuild.sh  rebuild.sh  rebuild_alpha_docker.sh  rebuild_local.sh  rollback_to_master.sh  rtmp.conf  test_srt.sh  test_srt_v2.sh  test_srt_v3.sh  test_srt_v4.sh  test_srt_v5.sh  test_srt_v6.sh  test_srt_v7.sh
backend/: .dockerignore  .env  .env.example  Cargo.toml  test_hash.rs
backend/data/: RELEASE_HISTORY.json  api_defaults.enc
backend/migrations/: 001_create_users.sql  002_create_media.sql  003_create_playlists.sql  004_create_schedule.sql  005_add_media_filler_flag.sql  006_create_settings_table.sql  007_add_running_state.sql  008_create_templates.sql  009_add_default_media_to_settings.sql  010_add_clips_counter_to_settings.sql  011_add_overlay_and_srt_settings.sql  012_add_versioning_to_settings.sql  013_add_folders.sql  014_update_version_to_1_9_1_PRO.sql  015_add_missing_settings_columns.sql  016_update_version_to_1_9_2_PRO.sql  017_set_default_assets.sql  018_performance_indexes.sql  019_add_multi_protocol_settings.sql  020_add_udp_mode.sql  021_add_auto_start_protocols.sql  022_add_codec_settings.sql  023_add_extended_protocols.sql  024_add_schedule_exceptions.sql  025_add_epg_days.sql  026_default_admin_login.sql  027_add_epg_url.sql  028_add_overlay_coordinates.sql  (+1 more)
(+193 files in other folders)
