[package]
name = "cloud-onepa-playout"
edition = "2021"
authors = ["Cloud Onepa Team"]
description = "Sistema de Automação de Playout 24/7 para Streaming de Vídeo"
version = "1.9.5"
license = "GPL-3.0"

[dependencies]
# Web Framework
actix-web = "4.3"
actix-cors = "0.6"
actix-files = "0.6"
actix-ws = "0.2"
actix-web-httpauth = "0.8"

# Async Runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Lazy static for global state
lazy_static = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.14"

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# FFmpeg Integration
# ffmpeg-next = "6.1"

# File Upload
actix-multipart = "0.6"

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0.40"

[dev-dependencies]
actix-rt = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
